2008-06-12  Yavor Doganov  <yavor@gnu.org>  (tiny change)

	* util/gendocs_template:
	1. Link to the new FSF online store.
	2. /server/footer-min.html is no longer necessary and we should remove
            it at some point.  It would be easier if less articles include it.
	3. Bump copyright year.

2008-06-12  Karl Berry  <karl@tug.org>

	* pretest 4.12.91.

2008-06-11  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/session.c (point_backward_char): Skip columns until
	previous point is reached.

	* info/dir.c, info/display.c, info/dribble.c, info/echo-area.c
	info/filesys.c, info/footnotes.c, info/gc.c, info/indices.c,
	info/info-utils.c, info/info.c, info/infodoc.c, info/infokey.c,
	info/infomap.c, info/m-x.c, info/makedoc.c, info/man.c,
	info/nodemenu.c, info/nodes.c, info/pcterm.c, info/search.c,
	info/session.c, info/terminal.c, info/tilde.c, info/variables.c,
	info/window.c: Avoid useless type casts.

2008-06-11  Sergey Poznyakoff  <gray@gnu.org.ua>

	Fix incremental regexp searches (bug reported by Bruno Haible).
	
	* info/search.c (regexp_search): Take an additional argument,
	pret.  Return the final state of search binding if it is given.
	* info/search.h (regexp_search): Update prototype.
	* info/session.c (info_search_in_node_internal): New function.
	(info_search_in_node): Rewrite as a wrapper over
	info_search_in_node_internal.
	(info_search_internal): Take an additional argument.  Initialize
	window->point from it if it is given.
	Use info_search_in_node_internal.

2008-06-10  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/session.c (_looking_at_newline, point_next_line)
	(point_prev_line, point_forward_char, point_backward_char)
	(point_skip_ws_forward, point_skip_ws_backward)
	(point_forward_word, point_backward_word): New functions.
	(info_end_of_line, info_forward_char, info_backward_char)
	(info_forward_word, info_backward_word): Reimplement to work
	correctly in multibytes locales.
	* info/window.c (window_scan_line): New function.