@@ -53,7 +53,6 @@ static char const * const exec_extensions[] = { "", NULL };
 #endif
 
 static char *read_from_fd (int fd);
-static void clean_manpage (char *manpage);
 static NODE *manpage_node_of_file_buffer (FILE_BUFFER *file_buffer,
     char *pagename);
 static char *get_manpage_contents (char *pagename);
@@ -222,7 +221,7 @@ executable_file_in_path (char *filename, char *path)
 static char *
 find_man_formatter (void)
 {
-  return executable_file_in_path ("man", (char *)getenv ("PATH"));
+  return executable_file_in_path ("man", getenv ("PATH"));
 }
 
 static char *manpage_pagename = NULL;
@@ -325,19 +324,6 @@ get_manpage_contents (char *pagename)
       freopen (NULL_DEVICE, "r", stdin);
       dup2 (pipes[1], fileno (stdout));
 
-      if (MB_CUR_MAX > 1)
-        {
-          /* Info has trouble wrapping man output if it contains
-             multibyte characters */
-          setenv("LANGUAGE", "C", 1);
-          setenv("LANG", "C", 1);
-#ifdef LC_MESSAGES
-          setenv("LC_MESSAGES", "C", 1);
-#endif
-          setenv("LC_CTYPE", "C", 1);
-          setenv("LC_ALL", "C", 1);
-        }
-
       execv (formatter_args[0], formatter_args);
 
       /* If we get here, we couldn't exec, so close out the pipe and
@@ -382,63 +368,6 @@ get_manpage_contents (char *pagename)
     clean_manpage (formatted_page);
 
   return formatted_page;
-}
-
-static void
-clean_manpage (char *manpage)
-{
-  register int i, j;
-  int newline_count = 0;
-  char *newpage;
-
-  newpage = xmalloc (1 + strlen (manpage));
-
-  for (i = 0, j = 0; (newpage[j] = manpage[i]); i++, j++)
-    {
-      if (manpage[i] == '\n')
-        newline_count++;
-      else
-        newline_count = 0;
-
-      if (newline_count == 3)
-        {
-          j--;
-          newline_count--;
-        }
-
-      /* A malformed man page could have a \b as its first character,
-         in which case decrementing j by 2 will cause us to write into
-         newpage[-1], smashing the hidden info stored there by malloc.  */
-      if (manpage[i] == '\b' || (manpage[i] == '\f' && j > 0))
-        j -= 2;
-      else if (!raw_escapes_p)
-	{
-	  /* Remove the ANSI escape sequences for color, boldface,
-	     underlining, and italics, generated by some versions of
-	     Groff.  */
-	  if (manpage[i] == '\033' && manpage[i + 1] == '['
-	      && isdigit (manpage[i + 2]))
-	    {
-	      if (isdigit (manpage[i + 3]) && manpage[i + 4] == 'm')
-		{
-		  i += 4;
-		  j--;
-		}
-	      else if (manpage[i + 3] == 'm')
-		{
-		  i += 3;
-		  j--;
-		}
-	      /* Else do nothing: it's some unknown escape sequence,
-		 so let's leave it alone.  */
-	    }
-	}
-    }
-
-  newpage[j++] = 0;
-
-  strcpy (manpage, newpage);
-  free (newpage);
 }
 
 static NODE *
